refactor: toList() 반영